--- a/styles.css
+++ b/styles.css
@@ -2,34 +2,146 @@
   @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
 
   body{
-    background-color: azure;
     font-family: 'Lato',sans-serif;
+    background-image: url(1292333.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
   }
 
   img{
-    width: 500px;
-    height: 300px;
-    border: solid 3px rgb(3, 162, 255);
+    width: 250px;
+    height: 150px;
+    border: solid 3px rgb(255, 255, 255);
     border-radius: 20px;
+  }
+  
+  h1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: xx-large;
   }
 
   h2{
-    color: blueviolet;
-    font-size: xx-large;
+    color: rgb(10, 10, 10);
+    font-weight: 500;
     text-align: center;
   }
   h3{
-    color: rgb(194, 65, 97);
+    color: rgb(0, 0, 0);
     text-align: center;
+    margin-right: 25%;
+    margin-left: 25%;
   }
 
   li{
     padding:5px;
     margin:2px;
+    font-weight: 900;
   }
 
   h2.hobbies{
     font-size: xx-large;
     text-align: center;
+    font-weight: 900;
+    color: white;
   }
   
+  nav.navbar{
+    text-align: center;
+    padding: 4px;
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+    margin-left: 10%;
+    margin-right: 10%;
+    font-weight: 11000;
+  }
+
+  nav>a{    
+    color: black;
+    font-weight:1000;
+    text-decoration: none;
+}
+nav>a:hover{
+    color: #ffffff;
+  }
+
+  img.profilepic{
+    height: 450px;
+    width: 250px;
+    border: solid 5px rgb(255, 203, 83);
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
+
+  .row{
+    display: flex;
+    padding: 40px;
+    text-align: end;
+    justify-content: space-around;
+    margin-left: 3%;
+  }
+
+  .column{
+    display: flex;
+    padding: 40px;
+    text-align: end;
+    justify-content: space-around;
+    margin-left: 0%;
+   
+  }
+
+  ul.myul{
+    display: inline-block;
+    text-align: left;
+  }
+  
+  div.container {
+    text-align: center;}
+
+img.hi{
+  margin-left: 28%;
+  border: solid 3px rgb(255, 203, 83);
+  border-radius: 10px;
+}
+
+
+
+p.end{
+  color: white;
+  text-align: center;
+  font-weight: 900;
+}
+
+.row1{
+  color: rgb(0, 0, 0);
+  display: flex;
+  padding: 40px;
+  text-align: end;
+  justify-content: space-around;
+  margin-left: 3%;
+  font-weight: 900;
+}
+
+.column1{
+  color: rgb(0, 0, 0);
+  display: flex;
+  padding-right: 40px;
+  text-align: center;
+  justify-content: space-around;
+  margin-left: 3%;
+  font-weight: 900;
+}
+
+ul.myul1{
+  display: inline-block;
+  text-align: left;
+}
+
+div.acheivements {
+  text-align: center;}
+
