--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
   body{
     font-family: 'Lato',sans-serif;
-    background-image: url(new1292333.jpg);
+    background-image: url(pexels-francesco-ungaro-281260.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
